<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.technicjelle</groupId>
	<artifactId>bluemapofflineplayermarkers</artifactId>
	<version>3.1-BETA</version>
	<packaging>jar</packaging>

	<name>BlueMapOfflinePlayerMarkers</name>
	<description>Adds markers where players have logged off to BlueMap</description>
	<url>https://github.com/TechnicJelle/BlueMapOfflinePlayerMarkers/</url>

	<properties>
		<java.version>25</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.2</version>
				<configuration>
					<relocations>
						<relocation>
							<pattern>com.technicjelle.BMUtils</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.shadow.BMUtils</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.technicjelle.MCUtils</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.shadow.MCUtils</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.technicjelle.UpdateChecker</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.shadow.UpdateChecker</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.shadow.bstats</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.spongepowered.configurate</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.shadow.configurate</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<repositories>
		<repository>
			<id>papermc-repo</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>bluecolored-releases</id>
			<name>BlueColored Repository</name>
			<url>https://repo.bluecolored.de/releases</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.technicjelle</groupId>
			<artifactId>UpdateChecker</artifactId>
			<version>2.5.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.technicjelle</groupId>
			<artifactId>BMUtils</artifactId>
			<version>5.1.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.technicjelle</groupId>
			<artifactId>MCUtils</artifactId>
			<version>2.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.destroystokyo.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.13.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>de.bluecolored.bluemap</groupId>
			<artifactId>BlueMapAPI</artifactId>
			<version>2.7.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>de.bluecolored.bluenbt</groupId>
			<artifactId>BlueNBT</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>26.1.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.2.1</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>
